--- a/About.css
+++ b/About.css
@@ -43,7 +43,7 @@ nav > div {
 }
 #NlogoCont > a > img {
   width: 60%;
-  height: 90%;
+  height: 100%;
 }
 #NpageLinksCont {
   width: 65%;
@@ -93,17 +93,67 @@ nav > div {
   background: white;
   color: rgb(252, 101, 54);
 }
-#NheadingInpContainer {
+
+/* /////////////////////////dropdown menu CSS////////////////////////////////// */
+
+.dropdown {
+  position: relative;
+  margin-top: 4.5%;
+  display: none;
+}
+
+/* Style for the dropdown button */
+.dropdown-btn {
+  background-color: rgb(44, 25, 25);
+  border: none;
+  cursor: pointer;
+}
+
+/* Style for the dropdown content */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(252, 101, 54);
+  min-width: 16vh;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Style for the dropdown items */
+.dropdown-item {
+  padding: 12px 16px;
+  display: block;
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+/* Change color on hover */
+.dropdown-item:hover {
+  background-color: black;
+}
+/* ----------------------header part---------------------------------- */
+#headerAlignCont{
+  width: 100%;
+  height: 90vh;
   top: 20vh;
   position: absolute;
-  height: 90vh;
-  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Poppins;
-  letter-spacing: 2px;
+}
+
+#NheadingInpContainer {
+  height: 100%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Poppins;
+    letter-spacing: 2px;
 }
 #NheadingInpContainer > h3 {
   color: white;
@@ -119,45 +169,49 @@ nav > div {
 }
 #NheadingInpContainer > div {
   margin-top: 3%;
-  height: 15%;
+  height: 14%;
   width: 57%;
   background-color: white;
   border-radius: 20px;
   display: flex;
-  padding: 0 1.5% 0 1%;
-  justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
 }
 .NlabelCont {
-  box-sizing: border-box;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  height: 90%;
-  border-radius: 20px;
-  width: 30%;
-  padding: 1%;
+    box-sizing: border-box;
+    box-shadow: rgba(92, 89, 89, 0.35) 0px 5px 15px;
+    height: 100%;
+    border-radius: 10px;
+    width: 31%;
+    padding: 2%;
+    box-sizing: border-box;
 }
 #NheadingInpContainer > div > div > input {
-  padding: 5% 10% 5% 1%;
-  border: none;
-  outline: none;
-  font-size: 15px;
+    padding: 8% 0;
+    border: none;
+    background: none;
+    outline: none;
+    font-size: 15px;
 }
 .Nlabels {
-  display: block;
-  font-size: 20px;
-  font-weight: 600;
+    display: block;
+    font-size: 18px;
+    font-weight: 600;
 }
 #Sh-btnCont {
-  width: 10%;
-  height: 90%;
+    width: 13%;
+    height: 100%;
+    box-sizing: border-box;
 }
 #Sh-searchBtn {
-  border-radius: 20px;
-  padding: 10% 8%;
-  border: 1px solid white;
-  background-color: white;
-  cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+    padding-top: 18%;
+    padding-bottom: 18%;
+    width: 100%;
+    border: none;
+    background-color: rgb(252, 101, 54);
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .NalignContainer {
@@ -301,7 +355,6 @@ nav > div {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
   width: 100%;
   height: 1200px;
 }
@@ -347,27 +400,26 @@ nav > div {
 
 /* after mid */
 .Nafter-mid-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 160px;
-  width: 100%;
-  height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80vh;
 }
 
 .Njoin-membership {
-  background-image: url("./Aboutimages/background3.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
-  height: 400px;
-  width: 80%;
-  background-color: honeydew;
-  border-radius: 20px;
+    background-image: url("./Aboutimages/background3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    height: 80%;
+    width: 80%;
+    background-color: honeydew;
+    border-radius: 20px;
 }
 
 .Njoin-membership p {
@@ -403,7 +455,6 @@ nav > div {
 }
 /* footer css */
 .Nabout-Footer {
-  margin-top: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -503,4 +554,197 @@ nav > div {
   text-decoration: none;
   font-size: 13px;
   font-family: Poppins;
+}
+
+/* ---------------------------------------------- */
+
+@media screen and (min-width: 450px) and (max-width: 675px){
+  header{
+      width: 100vw;
+      height: 70vh;
+  }
+  #NalignCont{
+      height: 15vh;
+  }
+  nav{
+      width: 90%;
+  }
+  #NlogoCont > a > img{
+      width: 100%;
+  }
+  #NpageLinksCont, #NnavBtnCont{
+      display: none;
+  }
+  /* /////////////////////////dropdown menu CSS////////////////////////////////// */
+
+  .dropdown{
+      width: 85%;
+      margin-top: 0;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+  } 
+
+  .show {
+      display: block; /* Use !important to override inline styles */
+      top: 10vh;
+      position: absolute;
+  }
+  /* ----------------------header part---------------------------------- */
+  #headerAlignCont{
+      height: 40vh;
+  }
+  #NheadingInpContainer{
+      width: 90%;
+  }
+  #NheadingInpContainer > h3{
+      font-size: 130%;
+      text-align: center;
+  }
+  #NheadingInpContainer > h1{
+      font-size: 250%;
+      text-align: center;
+  }
+  #NheadingInpContainer > div{
+      height: 20%;
+      width: 90%;
+      padding-right: 5%;
+  }
+  .Nlabels{
+      font-size: 16px;
+  }
+  #Sh-searchBtn{
+      padding-top: 11%;
+      padding-bottom: 11%;
+  }
+/*---------------------package media queries-------------------------- */
+  .NalignContainer{
+      height: 35vh;
+      top: 60vh;
+  }
+  .NalignContainer > div{
+      width: 90%;
+      height: 100%;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+  }
+  #NblankCont{
+      height: 25vh;
+  }
+  .NcommonAlignCont{
+      height: 15vh;
+  }
+  .NtransparentCont{
+      height: 100%;
+      width: 90%;
+      align-items: flex-end;
+  }
+  .NtransparentCont > h1{
+      font-size: 280%;
+  }
+  #Noverlap1stCont{
+      top: 95vh;
+      height: 15vh;
+      width: 90%;
+      align-items: flex-end;
+  }
+  .NoverlapCont > h2{
+      font-size: 180%;
+  }   
+  /* ------------------partner Section---------------- */
+  
+  .NalignCont5{
+      height: 50vh;
+  }
+  #NpartnerSection{
+      height: 100%;
+      width: 90%;
+  }
+  #NpartnerSection > div{
+      margin-top: 10%;
+      grid-template-columns: repeat(2, 1fr);
+  }
+  #NpartnerSection > article > p{
+      font-size: 130%;
+  }
+
+  .Nmid-container {
+    height: 140vh;
+    box-sizing: border-box;
+    padding: 8% 0;
+  }
+  
+  .Nmid-container-content {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 90%;
+    gap: 2%;
+  }
+  .Nmid-container-div2,
+  .Nmid-container-div4,
+  .Nmid-container-div6 {
+    margin-left: 2%;
+  }
+  .Nmid-container-content h4 {
+    font-size: 200%;
+  }
+  
+  .Nmid-container-content p {
+    font-size: 120%;
+  }
+
+  /* membership container medie queries*/
+  .Nafter-mid-container {
+    height: 50vh;
+  }
+  .Njoin-membership {
+    width: 90%;
+  }  
+  .Njoin-membership p {
+    font-size: 150%;
+  }
+  .Njoin-membership h3 {
+    font-size: 200%;
+    padding: 0 5%;
+  }
+  .Nmidcontainh3 {
+    width: 100%;
+  }
+  /* footer css -----------------------------------------*/
+
+  .Nabout-Footer {
+    height: 40vh;
+  }
+  
+  .Ncontent-Footer {
+    height: 90%;
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2%;
+  }
+  .Ncontent-Footer > div {
+    margin-top: 0;
+    padding-top: 5%;
+    letter-spacing: 1px;
+  }
+  
+  .Ncontent-Footer > :nth-child(2),
+  .Ncontent-Footer > :nth-child(3) {
+    margin-left: 0;
+  }
+  
+  .Ncontent-Footer > :nth-child(4) {
+    margin-left: 0;
+  }
+  #Nline-footer {
+    width: 90%;
+  }
+  .Nafter-line {
+    width: 90%;
+  }
+  .Nfooter-Grey2 {
+    font-size: 15px;
+  }
+
 }
