--- a/login.css
+++ b/login.css
@@ -88,17 +88,31 @@ nav > div {
 .Nlogin-main-container {
   display: flex;
   flex-direction: column;
-  margin-top: 110px;
+  margin-top: 150px;
   height: 563px;
   width: 100%;
   font-family: Poppins;
   align-items: center;
   justify-content: center;
 }
+
 .Nlogin-main-container h1 {
+  margin-top: -20px;
   font-size: 50px;
   font-weight: 700;
 }
+
+.Nlogin-image {
+  height: 500px;
+  width: 100%;
+  border-radius: 10px 0px 0px 10px;
+}
+.Nlogin-image img {
+  height: 500px;
+  width: 100%;
+  border-radius: 10px 0px 0px 10px;
+}
+
 .Nlogin-main-container label {
   font-size: 20px;
   font-weight: 500;
@@ -112,19 +126,19 @@ nav > div {
 }
 
 .Nlogin-inner-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: left;
   align-items: center;
   border-radius: 10px;
-  height: 300px;
-  width: 40%;
+  height: 500px;
+  width: 80%;
   gap: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
-.Nlogin-inner-container div {
+form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -142,7 +156,7 @@ nav > div {
 
 /* nishant-login-footer */
 .Nabout-Footer {
-  margin-top: 60px;
+  /* margin-top: 60px; */
   display: flex;
   justify-content: center;
   align-items: center;
