--- a/Blog.css
+++ b/Blog.css
@@ -420,7 +420,7 @@ nav > div{
     padding: 2% 3%;
     border : none;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 600;
     letter-spacing: 1px;
     cursor: pointer;
@@ -591,301 +591,239 @@ nav > div{
       font-family: Poppins;
     }
 
-    /* ------------------------media Queries------------------------------- */
 
-    @media screen and (min-width: 450px) and (max-width: 675px){
-      header{
-          width: 100vw;
-          height: 70vh;
-      }
-      #Sh-alignCont{
-          height: 15vh;
-      }
-      nav{
-          width: 90%;
-      }
-      #Sh-logoCont > a > img{
-          width: 100%;
-      }
-      #Sh-pageLinksCont, #Sh-navBtnCont{
-          display: none;
-      }
-      /* /////////////////////////dropdown menu CSS////////////////////////////////// */
-   
-      .dropdown{
-          width: 85%;
-          margin-top: 0;
-          display: flex;
-          justify-content: flex-end;
-          align-items: center;
-      } 
-  
-      .show {
-          display: block; /* Use !important to override inline styles */
-          top: 10vh;
-          position: absolute;
-      }
-      /* ----------------------header part---------------------------------- */
-      #headerAlignCont{
-          height: 40vh;
-      }
-      #Sh-headingInpContainer{
-          width: 90%;
-      }
-      #Sh-headingInpContainer > h3{
-          font-size: 130%;
-          text-align: center;
-      }
-      #Sh-headingInpContainer > h1{
-          font-size: 250%;
-          text-align: center;
-      }
-      #Sh-headingInpContainer > div{
-          height: 20%;
-          width: 90%;
-          padding-right: 5%;
-      }
-      .Sh-labels{
-          font-size: 16px;
-      }
-      #Sh-searchBtn{
-          padding-top: 11%;
-          padding-bottom: 11%;
-      }
+     /* pop */
+   .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 25px 25px;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    
+}
+.popup{
 
-      .Nfooter-Grey2 {
-        color: rgb(159, 156, 156);
-        text-decoration: none;
-        font-size: 13px;
-        font-family: Poppins;
-      }
-    
-    
-      /* pop */
-      .overlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); 
-    }
-    .popup {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 25px 25px;
-        background-color: white;
-        border: 1px solid #ccc;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        z-index: 1;
-        
-    }
-    .popup{
-    
-        width: 380px;
-        height: 250px;
-        background-size: cover;
-    
-    }
-    
-    #close{
-      color:white;
-        background-color: blue;
-        padding:12px;
-        margin-top: 25px;
-        border : none;
-        border-radius:10px;
-        position :relative;
-        top: -20px;
-        cursor: pointer;
-        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-    }
-    
-    #line{
-      margin-top: 120px;
-      padding-top: 0.2%;
-    background-color: black;
-      width:92%
-    }
-    
+    width: 380px;
+    height: 250px;
+    background-size: cover;
 
-  /*---------------------package media queries-------------------------- */
+}
 
-  @media screen and (min-width: 450px) and (max-width: 675px){
-    header{
-        width: 100vw;
-        height: 70vh;
-    }
-    #Sh-alignCont{
-        height: 15vh;
-    }
-    nav{
-        width: 90%;
-    }
-    #Sh-logoCont > a > img{
-        width: 100%;
-    }
-    #Sh-pageLinksCont, #Sh-navBtnCont{
-        display: none;
-    }
-    /* /////////////////////////dropdown menu CSS////////////////////////////////// */
+#close{
+  color:white;
+    background-color: blue;
+    padding:12px;
+    margin-top: 25px;
+    border : none;
+    border-radius:10px;
+    position :relative;
+    top: -20px;
+    cursor: pointer;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+#line{
+  margin-top: 120px;
+  padding-top: 0.2%;
+background-color: black;
+  width:92%
+}
+
+
+/*  top Screen */
+
  
-    .dropdown{
-        width: 85%;
-        margin-top: 0;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    } 
+ 
 
-    .show {
-        display: block; /* Use !important to override inline styles */
-        top: 10vh;
-        position: absolute;
-    }
-    /* ----------------------header part---------------------------------- */
-    #headerAlignCont{
-        height: 40vh;
-    }
-    #Sh-headingInpContainer{
-        width: 90%;
-    }
-    #Sh-headingInpContainer > h3{
-        font-size: 130%;
-        text-align: center;
-    }
-    #Sh-headingInpContainer > h1{
-        font-size: 250%;
-        text-align: center;
-    }
-    #Sh-headingInpContainer > div{
-        height: 20%;
-        width: 90%;
-        padding-right: 5%;
-    }
-    .Sh-labels{
-        font-size: 16px;
-    }
-    #Sh-searchBtn{
-        padding-top: 11%;
-        padding-bottom: 11%;
-    }
+
+
+
+  @media screen and (min-width: 450px) and (max-width: 675px){ 
+   header{
+      width: 100vw;
+      height: 70vh;
+  } 
+   #Sh-alignCont{
+      height: 15vh;
+  } 
+   nav{
+      width: 90%;
+  } 
+   #Sh-logoCont > a > img{
+      width: 100%;
+  } 
+   #Sh-pageLinksCont, #Sh-navBtnCont{
+      display: none;
+  } 
+  /* /////////////////////////dropdown menu CSS////////////////////////////////// */
+
+   .dropdown{
+      width: 85%;
+      margin-top: 0;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+  }  
+
+  .show {
+      display: block; /* Use !important to override inline styles */
+       top: 10vh;
+      position: absolute;
+  } 
+  /* ----------------------header part---------------------------------- */
+   #headerAlignCont{
+      height: 40vh;
+  } 
+   #Sh-headingInpContainer{
+      width: 90%;
+  } 
+   #Sh-headingInpContainer > h3{
+      font-size: 130%;
+      text-align: center;
+  } 
+   #Sh-headingInpContainer > h1{
+      font-size: 250%;
+      text-align: center;
+  } 
+   #Sh-headingInpContainer > div{
+      height: 20%;
+      width: 90%;
+      padding-right: 5%;
+  } 
+   .Sh-labels{
+      font-size: 16px;
+  } 
+  #Sh-searchBtn{
+      padding-top: 11%;
+      padding-bottom: 11%;
+  } 
 /*---------------------package media queries-------------------------- */
-    .Sh-alignContainer{
-        height: 35vh;
-        top: 60vh;
-    }
-    .Sh-alignContainer > div{
-        width: 90%;
-        height: 100%;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-    }
-    #Sh-blankCont{
-        height: 25vh;
-    }
-    .Sh-commonAlignCont{
-        height: 15vh;
-    }
-    .Sh-transparentCont{
-        height: 100%;
-        width: 90%;
-        align-items: flex-end;
-    }
-    .Sh-transparentCont > h1{
-        font-size: 280%;
-    }
-    #Sh-overlap1stCont{
-        top: 95vh;
-        height: 15vh;
-        width: 90%;
-        align-items: flex-end;
-    }
-    .Sh-overlapCont > h2{
-        font-size: 180%;
-    }
+  .Sh-alignContainer{
+      height: 35vh;
+      top: 60vh;
+  } 
+  .Sh-alignContainer > div{
+      width: 90%;
+      height: 100%;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+  } 
+  #Sh-blankCont{
+      height: 25vh;
+  } 
+  .Sh-commonAlignCont{
+      height: 15vh;
+  } 
+  .Sh-transparentCont{
+      height: 100%;
+      width: 90%;
+      align-items: flex-end;
+  } 
+   .Sh-transparentCont > h1{
+      font-size: 280%;
+  } 
+  #Sh-overlap1stCont{
+      top: 95vh;
+      height: 15vh;
+      width: 90%;
+      align-items: flex-end;
+  } 
+   .Sh-overlapCont > h2{
+      font-size: 180%;
+  } 
 
-    .paraGraph{
-      width: 90%; padding: 0;
-    }
+   .paraGraph{
+    width: 90%; padding: 0;
+  } 
 /* ---------------------Data Wrapper media queries---------------------------------------- */
 
-#Sh-alignCont9{
-  height: fit-content;
-}
-#data-Button-cont{
-  width: 90%;
-}
-#Sh-data-main-container1{
-  grid-template-columns:repeat(2, 1fr);
-  height: fit-content;
-  grid-row-gap: 1%;
-}
-.place-detail{
-  padding: 0 1%;
-}
-.subdiv>img{
-  height:38%;
-}
-#btnContainer{
-  height: 20vh;
-}
+ #Sh-alignCont9{
+height: fit-content;
+} 
+ #data-Button-cont{
+width: 90%;
+} 
+ #Sh-data-main-container1{
+grid-template-columns:repeat(2, 1fr);
+height: fit-content;
+grid-row-gap: 1%;
+} 
+ .place-detail{
+padding: 0 1%;
+} 
+ .subdiv>img{
+height:38%;
+} 
+ #btnContainer{
+height: 20vh;
+} 
 
-    /* membership container medie queries*/
-    .safter-mid-container {
-      height: 50vh;
-    }
-    .sjoin-membership {
-      width: 90%;
-    }  
-    .sjoin-membership p {
-      font-size: 150%;
-    }
-    .sjoin-membership h3 {
-      font-size: 200%;
-      padding: 0 5%;
-    }
-    .smidcontainh3 {
-      width: 100%;
-    }
-    /* footer css -----------------------------------------*/
-
-    .Nabout-Footer {
-      height: 40vh;
-    }
-    
-    .Ncontent-Footer {
-      height: 90%;
-      width: 90%;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2%;
-    }
-    .Ncontent-Footer > div {
-      margin-top: 0;
-      padding-top: 5%;
-      letter-spacing: 1px;
-    }
-    
-    .Ncontent-Footer > :nth-child(2),
-    .Ncontent-Footer > :nth-child(3) {
-      margin-left: 0;
-    }
-    
-    .Ncontent-Footer > :nth-child(4) {
-      margin-left: 0;
-    }
-    #Nline-footer {
-      width: 90%;
-    }
-    .Nafter-line {
-      width: 90%;
-    }
-    .Nfooter-Grey2 {
-      font-size: 15px;
-    }
+  /* membership container medie queries*/
+  .safter-mid-container {
+    height: 50vh;
+  } 
+   .sjoin-membership {
+    width: 90%;
+  }   
+   .sjoin-membership p {
+    font-size: 150%;
+  } 
+  .sjoin-membership h3 {
+    font-size: 200%;
+    padding: 0 5%;
   }
-}
+  .smidcontainh3 {
+    width: 100%;
+  }
+  /* footer css -----------------------------------------*/
+
+  .Nabout-Footer {
+    height: 40vh;
+  }
+  
+  .Ncontent-Footer {
+    height: 90%;
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2%;
+  }
+  .Ncontent-Footer > div {
+    margin-top: 0;
+    padding-top: 5%;
+    letter-spacing: 1px;
+  }
+  
+   .Ncontent-Footer > :nth-child(2),
+  .Ncontent-Footer > :nth-child(3) {
+    margin-left: 0;
+  } 
+   
+  .Ncontent-Footer > :nth-child(4) {
+    margin-left: 0;
+  }
+  #Nline-footer {
+    width: 90%;
+  }
+  .Nafter-line {
+    width: 90%;
+  }
+  .Nfooter-Grey2 {
+    font-size: 15px;
+  } 
+
+
+ }  
