--- a/Home.css
+++ b/Home.css
@@ -603,6 +603,57 @@ nav > div{
     color: rgb(252, 101, 54);;;
   }
 
+      /* pop */
+      .overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); 
+      }
+  .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 25px 25px;
+      background-color: white;
+      border: 1px solid #ccc;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      z-index: 1;
+      
+  }
+  .popup{
+  
+      width: 380px;
+      height: 250px;
+      background-size: cover;
+  
+  }
+  
+  #close{
+    color:white;
+      background-color: blue;
+      padding:12px;
+      margin-top: 25px;
+      border : none;
+      border-radius:10px;
+      position :relative;
+      top: -20px;
+      cursor: pointer;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+  
+  #line{
+    margin-top: 120px;
+    padding-top: 0.2%;
+  background-color: black;
+    width:92%
+  }
+/* ----------------------------------------------------   */
 
 #Sh-alignCont12{
     width: 100%;
@@ -864,7 +915,7 @@ nav > div{
         text-align: center;
     }
     #Sh-headingInpContainer > div{
-        height: 20%;
+        height: 25%;
         width: 90%;
         padding-right: 5%;
     }
